tests/sksl/errors/RedeclareSamplerType.dsl.glsl
### Compilation failed:

error: expected an identifier, but found type 'sampler'
1 error
